[package]
name = "deentry"
authors = ["Gijs Burghoorn <me@gburghoorn.com"]
description = "Interaction layer for FreeDesktop Desktop Entry files with a permissive license"
version = "0.0.1"

keywords = ["desktop", "entry", "freedesktop", "linux", "applications"]
categories = ["filesystem", "parsing"]

edition = "2021"

repository = "https://github.com/coastalwhite/deentry"
homepage = "https://github.com/coastalwhite/deentry"

readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
regex = "1.7.3"
